# youtube

./: .gitignore  LICENSE  README.md  manim_batch_renderer.py  pyproject.toml  requirements.txt
indian_explains_nn/: main.py  manim.cfg  nn.ipynb  nn.py  render.py
linear_algebra/: manim.cfg  vectors.py
maths_for_ml/linear_algebra/: vectors.py
ml_basics/kld/: kld.py  manim.cfg
understanding_Positional_Encoding/: manim.cfg  positional_encoding.py
understanding_self_attention/: self_attention.py
